--- a/QJY.WEB/View_Mobile/UI/UI_LCSP_LIST.html
+++ b/QJY.WEB/View_Mobile/UI/UI_LCSP_LIST.html
@@ -325,6 +325,9 @@
                             }
                         }
                     })
+                },
+                viewall: function () {
+                    window.location = "/View_Mobile/UI/UI_LCSP_LIST.html?r=" + Math.random();
                 }
             })
 
