修复流程审批设置人员时的BUG 给PC端流程审批过程中加了个添加催办的功能 完善流程的撤回到草稿箱功能 完善流程判断逻辑

--- a/QJY.WEB/ViewV5/AppPage/APPLIST.html
+++ b/QJY.WEB/ViewV5/AppPage/APPLIST.html
@@ -64,7 +64,7 @@
     <script src="../JS/jquery-1.11.2.min.js" type="text/javascript"></script>
     <script src="../JS/laypage/laypage.js"></script>
     <script src="../JS/avalon.js"></script>
-    <script src="../JS/SZHLCommon.js?jsver=20160915"></script>
+    <script src="../JS/SZHLCommon.js?jsver=20170915"></script>
 
     <script type="text/javascript">
         //$(".crm-tab .fa").check(function(){
@@ -134,16 +134,16 @@
                 })
             },
             Add: function (FormCode) {
-                top.ComFunJS.winviewform("/ViewV5/AppPage/APP_ADD_WF.html?FormCode=" + FormCode, '添加表单', "1000", "");
+                top.ComFunJS.winviewform("/ViewV5/AppPage/APP_ADD_WF.html?vsr=2017&FormCode=" + FormCode, '添加表单', "1000", "");
             },
             View: function (ID, PIID) {
-                top.ComFunJS.winviewformright2("/ViewV5/AppPage/APPView.html?FormCode=" + model.PathCode + "_" + model.FormCode + "&ID=" + ID + "&PIID=" + PIID + "&r=" + Math.random(), '详细信息', "1000", "");
+                top.ComFunJS.winviewformright2("/ViewV5/AppPage/APPView.html?vsr=2017&FormCode=" + model.PathCode + "_" + model.FormCode + "&ID=" + ID + "&PIID=" + PIID + "&r=" + Math.random(), '详细信息', "1000", "");
             },
             ViewForm: function (ID, PIID, event) {
                 if (event.stopPropagation) {
                     event.stopPropagation();
                 }
-                top.ComFunJS.winviewform("/ViewV5/AppPage/APP_ADD_WF.html?FormCode=" + model.PathCode + "_" + model.FormCode + "&ID=" + ID + "&PIID=" + PIID, "修改表单", "1000", "");
+                top.ComFunJS.winviewform("/ViewV5/AppPage/APP_ADD_WF.html?vsr=2017&FormCode=" + model.PathCode + "_" + model.FormCode + "&ID=" + ID + "&PIID=" + PIID, "修改表单", "1000", "");
             },
             ShowForm: function (ID, PIID) { //查看
 
