--- a/QJY.WEB/View_Mobile/UI/BASE/APP_MOBIL_WF.html
+++ b/QJY.WEB/View_Mobile/UI/BASE/APP_MOBIL_WF.html
@@ -185,7 +185,7 @@
         <div class="content">
             <div ms-include-src="/View_Mobile/UI/TEMP/MODEL/M{{FormCode}}.html?ver={{rdm}}" data-include-rendered='render' ms-css-padding-bottom="MobileWFData.size()>0?'0':'44px'"></div>
 
-            <div id="extdiv">
+            <div id="extdiv" class="weui_cells">
                 <div ms-if="ExtData.size()>0&&isHasDataQX=='Y'">
                     <!--<div class="weui_cells_title">{{FormCode=='LCSP'?'表单信息':'扩展信息'}}</div>-->
                     <!--<div class="weui_cells weui_cells_form" >-->
@@ -405,24 +405,24 @@
      <div class="page" id='selkh' style="overflow: auto;display:none" ms-controller="khmodel">
         <div ms-include-src="/View_Mobile/UI/TEMP/{{khcode}}.html?ver={{rdm}}" data-include-rendered='render1'></div>
     </div>
-    <script src="/View_Mobile/JS/layer/layer.m.js"></script>
+    <script src="/View_Mobile/JS/layer/layer.m.js?ver=1"></script>
     <script type='text/javascript' src='//g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
     <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.5.8/js/sm.min.js' charset='utf-8'></script>
     <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.5.8/js/sm-extend.min.js' charset='utf-8'></script>
     <script src="//res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
     <script src="/View_Mobile/JS/avalon1.47.js"></script>
-    <script src="/View_Mobile/JS/ComFunJS.js?jsver=20171206"></script>
+    <script src="/View_Mobile/JS/ComFunJS.js?jsver=20171226"></script>
     <script src="/View_Mobile/JS/raty/jquery.raty.js?v=1.3"></script>
-    <script src="/ViewV5/JS/WFJS.js?ver=20171215"></script>
+    <script src="/ViewV5/JS/WFJS.js?ver=20171225"></script>
     <script language="javascript" src="http://webapi.amap.com/maps?v=1.3&key=00fe526c7af6452674306b68a5cc8590"></script>
     <script>
         var peomodel = avalon.define({
             $id: "peomodel",
-            peopcode: "TEMP_INDEX_TXL",
+            peopcode: "Loading",
             nowpeodomid: "",//当前需要赋值的控件ID（选人）
             singleSelect: false,  //true:单选，false:多选
             render1: function () {
-                if (tempmodeltxl) {
+                if (typeof (tempmodeltxl) != "undefined" && tempmodeltxl) {
                     tempmodeltxl.inittemp();
                 }
                 avalon.templateCache = null;
@@ -430,11 +430,11 @@
         })
         var khmodel = avalon.define({
             $id: "khmodel",
-            khcode: "TEMP_INDEX_KH",
+            khcode: "Loading",
             nowpeodomid: "",//当前需要赋值的控件ID（选人）
             singleSelect: false,  //true:单选，false:多选
             render1: function () {
-                if (tempmodelkh) {
+                if (typeof (tempmodelkh) != "undefined" && tempmodelkh) {
                     tempmodelkh.inittemp();
                 }
                 avalon.templateCache = null;
