--- a/QJY.WEB/WZWeb/history.html
+++ b/QJY.WEB/WZWeb/history.html
@@ -412,6 +412,22 @@
 
             <ul class="timeline">
                 <li>
+                    <div class="time">2017-11-02</div>
+                    <div class="version">v1.1.8</div>
+                    <div class="number"></div>
+                    <div class="content">
+                        <pre>
++接口日志里添加了捕获得异常方法信息
++增加了手机端得一个登陆页,完善了手机端得首页，用来满足HTML5浏览器的功能使用
++修复了流程审批消息链接不正确得问题
++统一手机端和PC端得cook用户标识
++修复手机端流程审批页面得返回主页功能
++完善PC端文档共享模块
++完善手机端通讯录模块                                                      
+</pre>
+                    </div>
+                </li>
+                <li>
                     <div class="time">2017-09-02</div>
                     <div class="version">v1.1.7</div>
                     <div class="number"></div>
@@ -562,7 +578,8 @@
             <a href="http://wpa.qq.com/msgrd?v=3&uin=2041612083&site=qq&menu=yes" target="_blank" class="im-qq qq-a" title="在线QQ客服">
                 <div class="qq-container"></div>
                 <div class="qq-hover-c">
-                    <img class="img-qq" src="/WZWeb/images/qq.png"></div>
+                    <img class="img-qq" src="/WZWeb/images/qq.png">
+                </div>
                 <span>QQ在线咨询</span>
             </a>
             <div class="im-tel">
@@ -579,8 +596,10 @@
             <div class="im-footer" style="position: relative">
                 <div class="weixing-container">
                     <div class="weixing-show">
-                        <div class="weixing-txt">微信扫一扫<br>
-                            体验企业号</div>
+                        <div class="weixing-txt">
+                            微信扫一扫<br>
+                            体验企业号
+                        </div>
                         <img class="weixing-ma" src="/WZWeb/images/qrcode.jpg">
                         <div class="weixing-sanjiao"></div>
                         <div class="weixing-sanjiao-big"></div>
