--- a/QJY.WEB/ViewV5/AppPage/APP_ADD.html
+++ b/QJY.WEB/ViewV5/AppPage/APP_ADD.html
@@ -11,7 +11,7 @@
     <title></title>
     <!-- Bootstrap -->
     <link rel="stylesheet" type="text/css" href="/ViewV5/CSS/bootstrap3.3.5/css/bootstrap.css">
-    <link href="/ViewV5/CSS/BootOver.css" rel="stylesheet" />
+    <link href="/ViewV5/CSS/BootOver.css?v=1" rel="stylesheet" />
     <link rel="stylesheet" href="//at.alicdn.com/t/font_eedtp7mde99q9f6r.css">
     <link href="/ViewV5/JS/chosen/chosen.css" rel="stylesheet" />
 
